==> feaser/microtbx-demos/demos/modbus/ARM_CORTEXM_ST_Nucleo_F429ZI/bsp.c <==
#include "microtbx.h"                            /* MicroTBX base library              */
#include "microtbxmodbus.h"                      /* MicroTBX-Modbus library            */
#include "bsp.h"                                 /* Board support package              */
#include "stm32f4xx.h"                           /* STM32 CPU and HAL                  */

void BspInit(void)
{
  GPIO_InitTypeDef GPIO_InitStruct = {0};

  /* Disable the interrupts. */
  __disable_irq();

  /* Configure the system clock. */
  SystemClock_Config();

  /* Enable peripheral clocks. */
  __HAL_RCC_SYSCFG_CLK_ENABLE();
  __HAL_RCC_PWR_CLK_ENABLE();
  __HAL_RCC_USART3_CLK_ENABLE();
  __HAL_RCC_GPIOB_CLK_ENABLE();
  __HAL_RCC_GPIOC_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOF_CLK_ENABLE();

  /* Set interrupt group priority. Needs to be NVIC_PRIORITYGROUP_4 for FreeRTOS. */
  HAL_NVIC_SetPriorityGrouping(NVIC_PRIORITYGROUP_4);  

  /* Configure interrupt priorities. Note that 15 is the lowest priority on the STM32F4.
   * When using FreeRTOS, the NVIC priority number should be >=
   * configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY if the associated interrupt handlers
   * make use of FreeRTOS API calls.
   */
  HAL_NVIC_SetPriority(PendSV_IRQn,  15U, 0U);
  HAL_NVIC_SetPriority(SysTick_IRQn, 15U, 0U);
  HAL_NVIC_SetPriority(USART3_IRQn,  10U, 0U);

  /* Configure the digital input GPIO pins:
   *   - PC13 = Pushbutton (has external pull-down) = BSP_DIGITAL_IN1
   *   - PF14 = D4 (internal pull-down enabled)     = BSP_DIGITAL_IN2
   */
  GPIO_InitStruct.Pin = GPIO_PIN_13;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);
  GPIO_InitStruct.Pin = GPIO_PIN_14;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_PULLDOWN;
  HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);

  /* Configure the digital output GPIO pins:
   *   - PB0 = D33 = Green LED  = BSP_DIGITAL_OUT1
   *   - PB5 = D22              = BSP_DIGITAL_OUT2
   */
  GPIO_InitStruct.Pin = GPIO_PIN_0 | GPIO_PIN_5;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
  HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);
  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_0 | GPIO_PIN_5, GPIO_PIN_RESET);

  /* USART3 TX and RX GPIO pin configuration. */
  GPIO_InitStruct.Pin = GPIO_PIN_8 | GPIO_PIN_9;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF7_USART3;
  HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

  /* Enable interrupts in the NVIC. Note that FreeRTOS handles PendSV and SysTick. */
  HAL_NVIC_EnableIRQ(USART3_IRQn);

  /* Enable the interrupts. */
  __enable_irq();
}

void BspDigitalOut(tBspDigitalOut pin,
                   uint8_t        value)
{
  uint32_t const pinMask[BSP_NUM_DIGITAL_OUT] = { GPIO_PIN_0, GPIO_PIN_5 };

  /* Verify parameters. */
  TBX_ASSERT(pin < BSP_NUM_DIGITAL_OUT);

  /* Only continue with valid parameters. */
  if (pin < BSP_NUM_DIGITAL_OUT)
  {
    if (value != TBX_OFF)
    {
      HAL_GPIO_WritePin(GPIOB, pinMask[pin], GPIO_PIN_SET);      
    }
    else
    {
      HAL_GPIO_WritePin(GPIOB, pinMask[pin], GPIO_PIN_RESET);      
    }
  }
}

uint8_t BspDigitalIn(tBspDigitalIn pin)
{
  uint8_t              result = TBX_OFF;
  uint32_t       const pinMask[BSP_NUM_DIGITAL_IN]  = { GPIO_PIN_13, GPIO_PIN_14 };
  GPIO_TypeDef * const portMask[BSP_NUM_DIGITAL_IN] = { GPIOC, GPIOF };

  /* Verify parameters. */
  TBX_ASSERT(pin < BSP_NUM_DIGITAL_IN);

  /* Only continue with valid parameters. */
  if (pin < BSP_NUM_DIGITAL_IN)
  {
    /* The digital inputs have a pull-down, making them high-active. When the pin reads 
     * logic low, it is considered to be off. When it reads logic high, it is considered
     * to be on.
     */
    if (HAL_GPIO_ReadPin(portMask[pin], pinMask[pin]) == GPIO_PIN_SET)
    {
      /* Update the result for the on-state. */
      result = TBX_ON;
    }
  }
  /* Give the result back to the caller. */
  return result;
}
